--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
         <button type="button">Zamów usługe</button>
       </div>
-      <article>
+      <section>
         <ul>
           <li>
             <h4>LOREM IPSUM</h4>
@@ -55,8 +55,8 @@
             </p>
           </li>
         </ul>
-      </article>
-      <article>
+      </section>
+      <section>
         <h2>Czym się zajmujemy</h2>
         <ul>
           <li>
@@ -84,7 +84,7 @@
             />
           </li>
         </ul>
-      </article>
+      </section>
       <div>
         <h2>Nasz zespół</h2>
         <ul>
